--- a/index.html
+++ b/index.html
@@ -116,16 +116,17 @@
                 <div
                     class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                     <div class="p-8">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-4">API Testing Framework</h3>
-                        <p class="text-gray-600 mb-6 text-lg">Фреймворк для автоматизированного тестирования REST API с
+                        <h3 class="text-2xl font-bold text-gray-900 mb-4">UI and API Testing Framework</h3>
+                        <p class="text-gray-600 mb-6 text-lg">Фреймворк для автоматизированного тестирования UI and REST API с
                             генерацией подробных отчётов и интеграцией с CI/CD.</p>
                         <ul class="text-gray-600 mb-8 space-y-2 text-lg">
+                            <li>• Python + Selenium</li>
                             <li>• Python + Requests</li>
-                            <li>• JSON Schema валидация</li>
+                            <li>• Pydentic валидация</li>
                             <li>• Allure отчёты</li>
-                            <li>• Docker контейнеризация</li>
+                            <li>• Интеграция с CI/CD</li>
                         </ul>
-                        <a href="https://github.com/username/api-testing-framework"
+                        <a href="https://github.com/ZhikharevAl/TestNest.git"
                             class="text-indigo-600 hover:text-indigo-800 font-medium text-lg inline-flex items-center">
                             Посмотреть на GitHub
                             <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
