feat: added new project

--- a/index.html
+++ b/index.html
@@ -169,8 +169,32 @@
                     </a>
                 </div>
             </div>
+
+            <!-- API Defect Hunt -->
+            <div class="project-card">
+                <div class="project-content">
+                    <h3 class="project-title">API Defect Hunt</h3>
+                    <p class="project-description">Фреймворк для автоматизированного тестирования API с использованием
+                        Python, Playwright, Pydantic</p>
+                    <ul class="project-features">
+                        <li>• Python + Playwright</li>
+                        <li>• Pydantic валидация</li>
+                        <li>• Ruff, pre-commit</li>
+                        <li>• Allure отчёты</li>
+                        <li>• Интеграция с CI/CD</li>
+                    </ul>
+                    <a href="https://github.com/ZhikharevAl/qa-hackathon-raptors" class="github-link">
+                        Посмотреть на GitHub
+                        <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
+
 
     <!-- Секция технических навыков -->
     <section id="skills" class="section-min-height flex items-center bg-white">
