feat: added python ci project

--- a/index.html
+++ b/index.html
@@ -192,6 +192,29 @@
                     </a>
                 </div>
             </div>
+            <!-- Python CI -->
+            <div class="project-card">
+                <div class="project-content">
+                    <h3 class="project-title">Python CI</h3>
+                    <p class="project-description">A modern Python project template with comprehensive CI/CD setup using
+                        GitHub Actions and state-of-the-art development tools.</p>
+                    <ul class="project-features">
+                        <li>• Современный Python-стек: uv, ruff, pyright</li>
+                        <li>• Проверка типов с помощью Pyright</li>
+                        <li>• Линтинг и форматирование с помощью Ruff</li>
+                        <li>• Автоматизированное тестирование с pytest</li>
+                        <li>• Покрытие кода и интеграция с Codecov</li>
+                        <li>• Комплексная CI/CD настройка с GitHub Actions</li>
+                    </ul>
+                    <a href="https://github.com/ZhikharevAl/python-ci.git" class="github-link">
+                        Посмотреть на GitHub
+                        <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
