feat: added allure project-features

--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
                         <li>• Проверка типов с помощью Pyright</li>
                         <li>• Линтинг и форматирование с помощью Ruff</li>
                         <li>• Автоматизированное тестирование с pytest</li>
+                        <li>• Allure отчёты</li>
                         <li>• Покрытие кода и интеграция с Codecov</li>
                         <li>• Комплексная CI/CD настройка с GitHub Actions</li>
                     </ul>
