--- a/index.html
+++ b/index.html
@@ -103,6 +103,42 @@
     <section id="projects" class="section-min-height flex items-center bg-cover bg-center bg-no-repeat project-bg">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-16 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
+            <!-- Autotests of the charity service's backend -->
+            <div class="project-card">
+                <div class="project-content">
+                    <h3 class="project-title">Autotests of the charity service's backend</h3>
+                    <p class="project-description">
+                        Индивидуальный фреймворк автоматизированного тестирования API бэкенда благотворительного
+                        сервиса,
+                        который помогает пожилым людям получать поддержку волонтеров в повседневных задачах, таких как
+                        покупка
+                        продуктов, уборка или сопровождение к врачам.
+                    </p>
+                    <ul class="project-features">
+                        <li>• Спроектировал масштабируемый фреймворк с использованием Python 3.13, pytest, Playwright и
+                            Pydantic,
+                            обеспечивая легкость поддержки и адаптации к изменениям API.</li>
+                        <li>• Настроил контейнеризованную среду с Podman и CI/CD через GitHub Actions для стабильного
+                            выполнения тестов.</li>
+                        <li>• Реализовал mock-тестирование для надежной работы тестов при нестабильном API.</li>
+                        <li>• Выявил и задокументировал 15+ критических дефектов API с отчетами Allure, улучшив качество
+                            сервиса.</li>
+                        <li>• <strong>Результат:</strong> Повысил надежность API, обеспечив стабильность и безопасность
+                            для пользователей.</li>
+                        <li>• <strong>Технологии:</strong> Python 3.13, pytest, Playwright, Pydantic, Allure Report,
+                            GitHub Actions, Podman</li>
+                    </ul>
+                    <a href="https://github.com/ZhikharevAl/fake_it_till_you_make_it.git" class="github-link">
+                        Посмотреть на GitHub
+                        <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+
+
             <!-- Python CI -->
             <div class="project-card">
                 <div class="project-content">
@@ -245,9 +281,9 @@
                 <!-- Docker -->
                 <div
                     class="p-8 bg-gray-50 rounded-xl shadow-md transform hover:scale-105 transition-transform duration-300">
-                    <span class="text-5xl mb-6 block">🐳</span>
-                    <h3 class="text-2xl font-bold text-gray-900 mb-4">Docker</h3>
-                    <p>Контейнеризация, Docker Compose, Оркестрация</p>
+                    <span class="text-5xl mb-6 block">🐳 🦭</span>
+                    <h3 class="text-2xl font-bold text-gray-900 mb-4">Контейнеризация</h3>
+                    <p>Docker, Docker Compose, Podman</p>
                 </div>
 
                 <!-- CI/CD -->
