fix: update job title from SYSTEM.ARCHITECT to SDET.ENGINEER

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <!-- Замените src на путь к вашему фото -->
                                 <img src="img/photo.png" alt="Фото Алексея Жихарева" class="w-full h-full object-cover">
                             </div>
-                            <div class="text-cyan-400 orbitron text-lg mb-4">SYSTEM.ARCHITECT</div>
+                            <div class="text-cyan-400 orbitron text-lg mb-4">SDET.ENGINEER</div>
                             <div class="grid grid-cols-2 gap-4 text-sm">
                                 <div class="text-left">
                                     <div class="text-gray-400">LOCATION:</div>
